--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   
   <title>Frontend Mentor | News homepage</title>
 
+  <link rel="stylesheet" href="./assets/style/style.css">
+  <link rel="stylesheet" href="./assets/style/responsive.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,46 +17,93 @@
   </style>
 </head>
 <body>
+<nav class="navigation">
+      <h1>W.</h1>
+      <ul class="nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#new">New</a></li>
+        <li><a href="#popular">Popular</a></li>
+        <li><a href="#trendring">Trending</a></li>
+        <li><a href="#categories">Categories</a></li>
+      </ul>
+</nav>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+<div class="container-1">
+ <div class="item-1">
+    <img src="./assets/images/image-web-3-desktop.jpg" alt="" class="home-img">
 
-  The Bright Future of Web 3.0?
+    <div class="item-1-1">
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+     <h2 class="title">The Bright Future of Web 3.0?</h2>
+   
+     <div class="text-button">
+      <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+       But is it really fulfilling its promise?</p>
 
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+       <button>  Read more </button>
+    </div>
+   </div>
   
+ 
+   </div>
+
+
+   <div class="item-2">
+    <h2 class="new ">New </h2>
+
+    <p class="subtitle-2">Hydrogen VS Electric Cars</p>
+    <p class="item-2-txt"> Will hydrogen-fueled cars ever catch up to EVs?</p>
+
+  </hr>
+
+  <p class="subtitle-2" >  The Downsides of AI Artistry</p>
+  <p class="item-2-txt">What are the possible adverse effects of on-demand AI image generation?</p>
+ </hr>
+
+ <p class="subtitle-2">Is VC Funding Drying Up?</p>
+  <p class="item-2-txt"> Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+
+  </div>
+</div>
+
+
+<div class="container-2">
+
+  <div class="c-2-item">
+    <img src="./assets/images/image-retro-pcs.jpg" alt="">
+    <div class="c-2-text">
+      <p>01</p>
+      <p class="subtitle">Reviving Retro PCs</p>
+      <p>What happens when old PCs are given modern upgrades?</p>
+    </div>
+    
+  </div>
+
+  <div class="c-2-item">
+    <img src="./assets/images/image-top-laptops.jpg" alt="">
+    <div class="c-2-text">
+      <p>02</p>
+    <p class="subtitle"> Top 10 Laptops of 2022</p>
+    <p>Our best picks for various needs and budgets.</p>
+    </div>
+    
+  </div>
+
+  <div class="c-2-item">
+    <img src="./assets/images/image-gaming-growth.jpg" alt="">
+    <div class="c-2-text">
+      <p>03</p>
+      <p class="subtitle">The Growth of Gaming</p>
+      <p>How the pandemic has sparked fresh opportunities.</p>
+    </div>
+   
+  </div>
+
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Kanto Ramanandraibe</a>.
   </div>
 </body>
 </html>
